--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 		"@types/cookie-parser": "^1.4.7",
 		"@types/cors": "^2.8.17",
 		"@types/express": "^5.0.0",
+		"@types/jsonwebtoken": "^9.0.7",
 		"@types/morgan": "^1.9.9",
 		"@types/node": "^22.8.1",
 		"eslint": "^9.13.0",
