--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
 		"dotenv": "^16.4.5",
 		"eslint-plugin-import-alias": "^1.2.0",
 		"express": "^4.21.1",
+		"express-rate-limit": "^7.4.1",
 		"helmet": "^8.0.0",
 		"jsonwebtoken": "^9.0.2",
 		"morgan": "^1.10.0",
+		"nodemailer": "^6.9.15",
 		"nodemon": "^3.1.7",
 		"zod": "^3.23.8"
 	},
@@ -39,6 +41,7 @@
 		"@types/jsonwebtoken": "^9.0.7",
 		"@types/morgan": "^1.9.9",
 		"@types/node": "^22.8.1",
+		"@types/nodemailer": "^6.4.16",
 		"eslint": "^9.13.0",
 		"globals": "^15.11.0",
 		"prisma": "^5.21.1",
