--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"helmet": "^8.0.0",
 		"jsonwebtoken": "^9.0.2",
 		"morgan": "^1.10.0",
+		"multer": "1.4.5-lts.1",
 		"nodemailer": "^6.9.15",
 		"nodemon": "^3.1.7",
 		"zod": "^3.23.8"
@@ -40,6 +41,7 @@
 		"@types/express": "^5.0.0",
 		"@types/jsonwebtoken": "^9.0.7",
 		"@types/morgan": "^1.9.9",
+		"@types/multer": "^1.4.12",
 		"@types/node": "^22.8.1",
 		"@types/nodemailer": "^6.4.16",
 		"eslint": "^9.13.0",
