--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
 	"name": "@servicerental/backend",
 	"version": "1.2.0",
 	"description": "service rental backend",
-	"main": "src/Server/server.ts",
+	"main": "dist/server.js",
 	"scripts": {
-		"start": "ts-node src/Server/server.ts",
+		"start": "node dist/server.js",
 		"dev": "nodemon src/Server/server.ts",
-		"build": "tsc",
-		"start:dist": "node dist/src/Server/server.js",
+		"build": "webpack",
+		"start:dist": "node dist/server.js",
 		"lint": "eslint --fix src test",
 		"test": "jest",
 		"typecheck": "tsc --noEmit"
@@ -32,6 +32,9 @@
 		"multer": "1.4.5-lts.1",
 		"nodemailer": "^6.9.15",
 		"nodemon": "^3.1.7",
+		"ts-loader": "^9.5.1",
+		"webpack": "^5.96.1",
+		"webpack-node-externals": "^3.0.0",
 		"zod": "^3.23.8"
 	},
 	"devDependencies": {
@@ -50,6 +53,7 @@
 		"ts-node": "^10.9.2",
 		"tsconfig-paths": "^4.2.0",
 		"typescript": "^5.6.3",
-		"typescript-eslint": "^8.11.0"
+		"typescript-eslint": "^8.11.0",
+		"webpack-cli": "^5.1.4"
 	}
 }
