--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,19 +1,20 @@
 {
   "compilerOptions": {
-    "outDir": "dist",
+    "outDir": "./dist/src",
+    "baseUrl": "./",
+    "rootDir": "./src",
     "sourceMap": true,
     "target": "esnext",
     "module": "commonjs",
     "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
+      "forceConsistentCasingInFileNames": true,
     "noImplicitAny": true,
     "strict": true,
     "skipLibCheck": true,
 
     "paths": {
       "@*": ["./*"],
-      "@src*": ["./src/*"],
-      "@v1/*": ["./src/v1/*"],
+      "@src/*": ["./src/*"],
       "@utils/*": ["./src/utils/*"],
       "@middleware/*": ["./src/middleware/*"]
     }
